fix cutoff captions

--- a/website/logo.scss
+++ b/website/logo.scss
@@ -89,7 +89,7 @@
         background-color: var(--logo-caption-box);
 
         padding: .5em;
-        height: 1em;
+        height: 2em;
         overflow: hidden;
         white-space: nowrap;
 
